--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
+    "eslint-config-prettier": "^10.1.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
